DIG-83 upload model artifact

--- a/.github/workflows/build-model.yml
+++ b/.github/workflows/build-model.yml
@@ -15,3 +15,10 @@ jobs:
         python-version: '3.9'
     - name: Install dependencies
       run: python -m pip install -r requirements.txt
+    - name: Train model
+      run: python train.py
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: baummethoden.pickle
+        path: models/models/baummethoden.pickle
