--- a/.github/workflows/build-model.yml
+++ b/.github/workflows/build-model.yml
@@ -21,4 +21,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: baummethoden.pickle
-        path: models/models/baummethoden.pickle
+        path: models/baummethoden.pickle
