--- a/.github/workflows/model-training.yml
+++ b/.github/workflows/model-training.yml
@@ -6,3 +6,9 @@ jobs:
       runs-on: ubuntu-latest
       steps: 
         - uses: actions/checkout@v2
+        - name: Set up Python
+          uses: actions/setup-python@v2
+          with:
+            python-version: '3.9'
+        - name: Get python version
+          run: python -V
