--- a/.github/workflows/model-training.yml
+++ b/.github/workflows/model-training.yml
@@ -10,5 +10,5 @@ jobs:
           uses: actions/setup-python@v2
           with:
             python-version: '3.9'
-        - name: Get python version
-          run: python -V
+        - name: Install dependencies
+          run: pip install -r requirements.txt
