--- a/.github/workflows/model-training.yml
+++ b/.github/workflows/model-training.yml
@@ -12,3 +12,5 @@ jobs:
             python-version: '3.9'
         - name: Install dependencies
           run: pip install -r requirements.txt
+        - name: Train model
+          run: python train.py
