force add model to git

--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -34,6 +34,7 @@ jobs:
         shell: bash
         run: |
           git add .
+          git add --force models/baummethoden.pickle
           git commit -m "[CI] update trained model" || echo "No changes to commit"
           git push --set-upstream origin heroku
       - name: Deploy to Heroku
