fix git fetch in pipeline

--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           git config --global user.email ""
           git config --global user.name "Github Actions"
+          git fetch --all
           git pull
           git checkout heroku 2>/dev/null || git checkout -b heroku
           git merge main
