--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -15,9 +15,8 @@ jobs:
           git config --global user.email ""
           git config --global user.name "Github Actions"
           git fetch --all --unshallow
-          git pull
           git checkout heroku 2>/dev/null || git checkout -b heroku
-          git merge main
+          git merge main -X theirs
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
