fix git fetch in pipeline

--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -16,7 +16,7 @@ jobs:
           git config --global user.name "Github Actions"
           git fetch --all --unshallow
           git checkout heroku 2>/dev/null || git checkout -b heroku
-          git merge main -X theirs
+          git merge main -X theirs --allow-unrelated-histories
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
